# order-services

./: .env.dev  .env.k8s  .env.local  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  prometheus.yml  pyproject.toml
app/: config.py  main.py
app/api/routers/: orders.py
app/domain/models/: order.py
app/infrastructure/clients/: menu_client.py  user_client.py
app/infrastructure/clients/menu_grpc/: menu_pb2.py  menu_pb2.pyi  menu_pb2_grpc.py
app/infrastructure/db/: session.py
app/infrastructure/kafka/: producer.py
app/infrastructure/logging/: logger.py
app/infrastructure/prometheus/: metrics.py
app/infrastructure/repositories/: order_repository.py
app/infrastructure/security/: jwt.py
app/middlewares/: authentication.py
app/schemas/: order.py  user.py
app/use_cases/: order_usecase.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service-monitor.yaml  service.yaml
protos/: menu.proto
