[project]
name = "order-services"
version = "0.1.0"
description = ""
authors = [
    {name = "Héctor Lozada",email = "imatsu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.40,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "async-lru (>=2.0.5,<3.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "python-json-logger (>=3.3.0,<4.0.0)",
    "prometheus-client (>=0.22.0,<0.23.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
    "grpcio (>=1.72.1,<2.0.0)",
    "grpcio-tools (>=1.72.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipython = "^9.2.0"
mypy-protobuf = "^3.6.0"

